--- a/AniWatch/AniWatch/Views/AnimeCategories/Delete.cshtml
+++ b/AniWatch/AniWatch/Views/AnimeCategories/Delete.cshtml
@@ -16,20 +16,18 @@
             @Html.DisplayNameFor(model => model.Anime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Anime.AnimeId)
+            @Html.DisplayFor(model => model.Anime.AnimeName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryId)
+            @Html.DisplayFor(model => model.Category.CategoryName)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="AnimeCategoryId" />
-        <input type="hidden" asp-for="AnimeId" />
-        <input type="hidden" asp-for="CategoryId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
