--- a/AniWatch/AniWatch/Views/AnimeCategories/Details.cshtml
+++ b/AniWatch/AniWatch/Views/AnimeCategories/Details.cshtml
@@ -15,17 +15,17 @@
             @Html.DisplayNameFor(model => model.Anime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Anime.AnimeId)
+            @Html.DisplayFor(model => model.Anime.AnimeName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryId)
+            @Html.DisplayFor(model => model.Category.CategoryName)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a asp-action="Edit" asp-route-id="@Model?.AnimeCategoryId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
