--- a/AniWatch/AniWatch/Views/AnimeCategories/Index.cshtml
+++ b/AniWatch/AniWatch/Views/AnimeCategories/Index.cshtml
@@ -26,15 +26,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Anime.AnimeId)
+                @Html.DisplayFor(modelItem => item.Anime.AnimeName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.CategoryId)
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <a asp-action="Edit" asp-route-id="@item.AnimeCategoryId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.AnimeCategoryId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.AnimeCategoryId">Delete</a>
             </td>
         </tr>
 }
