--- a/AniWatch/AniWatch/Views/AnimeCategories/Edit.cshtml
+++ b/AniWatch/AniWatch/Views/AnimeCategories/Edit.cshtml
@@ -8,33 +8,29 @@
 
 <h4>AnimeCategories</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+@using (Html.BeginForm())
+{@Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label class="control-label">Anime Name</label>
+                
+                    @Html.DropDownListFor(model => model.AnimeCategories.AnimeId, new SelectList(Model.Animes, "AnimeId", "AnimeName"))
+               
+                
+            </div>
+            <div class="form-group">
+                <label class="control-label">Category Name</label>
+            @Html.DropDownListFor(model => model.AnimeCategories.CategoryId, new SelectList(Model.Categories, "CategoryId", "CategoryName"))
+            </div>
+            <div class="form-group">
             
-            <div class="form-group">
-                <select asp-for="AnimeId" class="form-select form-control">
-                    @foreach(Anime anime in Model.Animes){
-                        <option value="@anime.AnimeId">@anime.AnimeName</option>
-                    }
-                </select>
-            </div>
-            <div class="form-group">
-                <select asp-for="CategoryId" class="form-select form-control">
-                    @foreach(Category category in Model.Categories){
-                        <option value="@category.CategoryId">@category.CategoryName</option>
-                    }
-                </select>
-            </div>
+                    <input type="submit" value="Save" class="btn btn-primary" />
             
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
+        </div>
     </div>
-</div>
-
+}
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
@@ -42,3 +38,10 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+<div class="form-group">
+                
+            </div>
+            <div class="form-group">
+                
