--- a/AniWatch/AniWatch/Views/Shared/_Layout.cshtml
+++ b/AniWatch/AniWatch/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mangas" asp-action="Index">Manga</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Episodes" asp-action="Index">Episodes</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
