--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Mangas/Create.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Mangas/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Anime_Streaming_Platform.Models.Manga
+﻿@using Anime_Streaming_Platform.Models
+@model Anime_Streaming_Platform.ViewModels.MangaAnimeViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Create";
@@ -24,8 +25,13 @@
                 <span asp-validation-for="MangaDesc" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AnimeId" class="control-label"></label>
-                <select asp-for="AnimeId" class="form-control" asp-items="ViewBag.AnimeId"></select>
+                <label class="control-label">Select Anime</label>
+                <select asp-for="AnimeId" class="form-select form-control">
+                    @foreach(Anime anime in Model.Animes){
+                        <option value="@anime.AnimeId">@anime.AnimeName</option>
+                    }
+                </select>
+                   
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
