--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Mangas/Edit.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Admin/Views/Mangas/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Anime_Streaming_Platform.Models.Manga
+﻿@using Anime_Streaming_Platform.Models
+@model Anime_Streaming_Platform.ViewModels.MangaAnimeViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Edit";
@@ -16,18 +17,15 @@
             <input type="hidden" asp-for="MangaId" />
             <div class="form-group">
                 <label asp-for="MangaName" class="control-label"></label>
-                <input asp-for="MangaName" class="form-control" />
-                <span asp-validation-for="MangaName" class="text-danger"></span>
+                @Html.EditorFor(model=> model.Mangas.MangaName, new { htmlAttributes = new { @class = "form-control" } })
             </div>
             <div class="form-group">
                 <label asp-for="MangaDesc" class="control-label"></label>
-                <input asp-for="MangaDesc" class="form-control" />
-                <span asp-validation-for="MangaDesc" class="text-danger"></span>
+                @Html.EditorFor(model=> model.Mangas.MangaDesc, new { htmlAttributes = new { @class = "form-control" } })
             </div>
             <div class="form-group">
                 <label asp-for="AnimeId" class="control-label"></label>
-                <select asp-for="AnimeId" class="form-control" asp-items="ViewBag.AnimeId"></select>
-                <span asp-validation-for="AnimeId" class="text-danger"></span>
+                @Html.DropDownListFor(model => model.Mangas.AnimeId, new SelectList(Model.Animes, "AnimeId", "AnimeName"), new { @class = "form-control valid" })
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
