--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Home/Index.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Home/Index.cshtml
@@ -1,9 +1,146 @@
-﻿@{
+﻿@model IEnumerable<Anime_Streaming_Platform.Models.Anime>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
     ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>This is a admin only area. You won't be able to make changes to any of the modules.</p>
-    <p>To make changes please sign in using your admin account.</p>
+<div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://s1.narvii.com/image/7l6nn7otjpuqgb2m2idb546pwr6i65qx_hq.jpg" class="d-block h-25" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://s1.narvii.com/image/7l6nn7otjpuqgb2m2idb546pwr6i65qx_hq.jpg" class="d-block h-25" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://s1.narvii.com/image/7l6nn7otjpuqgb2m2idb546pwr6i65qx_hq.jpg" class="d-block h-25" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
+  <div class="album py-5 bg-dark">
+    <div class="container">
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+
+        <div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col w-25">
+          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
+            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <p class="card-title mt-n2 fs-4">AnimeName</p>
+              <div class="d-flex justify-content-center align-items-center">
+                <div >
+                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+        
+
+
+      </div>
+    </div>
+  </div>
