--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Home/Index.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Anime_Streaming_Platform.Models.Anime>
+﻿
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Home Page";
@@ -33,114 +33,15 @@
 </div>
 
   <div class="album py-5 bg-dark">
-    <div class="container">
+    <div class="container mv">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-
-        <div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div><div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div><div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div><div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col w-25">
-          <div class="card text-bg-dark  shadow-sm border border-1 border-opacity-25 border-light">
-            <img class="bd-placeholder-img card-img-top img-responsive mw-50"  src="https://th.bing.com/th/id/OIP.Z-fIXSLdzsSgVUEi1w0BWwHaK5?pid=ImgDet&rs=1"></img>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <p class="card-title mt-n2 fs-4">AnimeName</p>
-              <div class="d-flex justify-content-center align-items-center">
-                <div >
-                  <button type="button" class="btn btn-sm btn-outline-primary">Watch Now</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="bi bi-heart"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-
-
-        
-
-
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="anime-cards">
+          <!--THe code is called from the site.js where the methods are for calling from the api-->
       </div>
+
+
+
+
     </div>
   </div>
+      <script src="~/js/site.js" asp-append-version="true"></script>
