Completed Bookmarks, started method for watching anime

--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Bookmarks/Index.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Bookmarks/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Bookmark Page";
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
-<div class="list-group" id="anime-list">
+<div class="list-group d-flex align-items-center" id="anime-list">
     <!--THe code is called from the bookmark.js where the methods are for calling from the api-->
 </div>
     <script src="~/js/bookmark.js" asp-append-version="true"></script>
