fixed navbar links and made dropdowns

--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using Anime_Streaming_Platform.Models
+@inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
