--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Areas/Identity/Pages/Account/Register.cshtml
@@ -15,6 +15,11 @@
             <h1 class="h3 mb-3 fw-normal text-white">Sign in</h1>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating ">
+                <input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" style="width:400px; margin-bottom:25px;"/>
+                <label asp-for="Input.UserName"></label>
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-floating ">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" style="width:400px; margin-bottom:25px;"/>
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
