--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Shared/_LoginPartial.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Shared/_LoginPartial.cshtml
@@ -5,8 +5,18 @@
 <ul class="navbar-nav bg-dark navbar-dark">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity?.Name</a>
+    <li class="nav-item dropdown bg-dark">
+        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        @User.Identity?.Name
+        </a>
+        <ul class="dropdown-menu bg-dark">
+            @if (User.IsInRole("Admin"))
+                {
+                    <li><a class="nav-link active" aria-current="page" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
+                }
+            <li><a class="nav-link active" aria-current="page" asp-area="" asp-controller="Bookmarks" asp-action="Index">Bookmarks</a></li>
+            <li><a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage Account</a></li>
+        </ul>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -24,3 +34,5 @@ else
     </li>
 }
 </ul>
+
+
