Admin Functions for User management

--- a/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Episodes/Episode.cshtml
+++ b/AnimeStreamingPlatform/Anime Streaming Platform/Anime Streaming Platform/Views/Episodes/Episode.cshtml
@@ -5,14 +5,10 @@
     ViewData["Title"] = "Episode";
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
-
-<div id="anime-details">
-    <!-- Placeholder for anime details -->
-</div>
-
-<div id="episodes-list">
-
-
+<div class="d-flex justify-content-evenly">
+        <div id="anime-details">
+            <!-- Placeholder for anime details -->
+        </div>
 </div>
 
 
